assets/css/lesson.scss
---
---

//----------------------------------------
// Colors.
//----------------------------------------

// branding
$color-brand:       #2b3990 !default;

// code boxes
$color-error:       #bd2c00 !default;
$color-output:      #303030 !default;
$color-source:      #6e5494 !default;

// blockquotes
$color-callout:     #f4fd9c !default;
$color-challenge:   #eec275 !default;
$color-checklist:   #dfd2a0 !default;
$color-discussion:  #eec275 !default;
$color-keypoints:   #7ae78e !default;
$color-objectives:  #daee84 !default;
$color-prereq:      #9cd6dc !default;
$color-solution:    #ded4b9 !default;
$color-testimonial: #fc8dc1 !default;

//----------------------------------------
// Specialized code blocks.
//----------------------------------------

@mixin cdSetup($color) {
  color: $color;
  border-left: solid 5px $color;
  margin: 0px;
  border-radius: 4px 0 0 4px;
}

.error  { @include cdSetup($color-error); }
.output { @include cdSetup($color-output); }
.source { @include cdSetup($color-source); }

.bash, .language-bash     { @include cdSetup($color-source); }
.make, .language-make     { @include cdSetup($color-source); }
.matlab, .language-matlab { @include cdSetup($color-source); }
.python, .language-python { @include cdSetup($color-source); }
.r, .language-r           { @include cdSetup($color-source); }
.sql, .langauge-sql       { @include cdSetup($color-source); }
.java, .language-java { @include cdSetup($color-source); }

.error pre,
.output pre,
.source pre,
.bash pre,
.language-bash pre,
.make pre,
.language-make pre,
.matlab pre,
.language-matlab pre,
.python pre,
.language-python pre,
.r pre,
.language-r pre,
.sql pre ,
.language-sql pre {
  border-radius: 0 4px 4px 0;
}

//----------------------------------------
// Specialized blockquote environments for learning objectives, callouts, etc.
//----------------------------------------

$codeblock-padding: 5px !default;

@mixin bkSetup($color, $glyph) {

  $gradientcolor1: $color;
  $gradientcolor2: scale-color($color, $lightness: 10%);

  padding-left: $codeblock-padding;
  padding-top: 0;
  padding-bottom: 0;
  padding-right: 0;
  border: 1px solid;
  border-color: $color;
  padding-bottom: $codeblock-padding;

  h2 {
    padding-top: $codeblock-padding;
    padding-bottom: $codeblock-padding;
    font-size: 20px;
    background: linear-gradient(to bottom, $gradientcolor1, $gradientcolor2);
    border-color: $color;
    margin-top: 0px;
    margin-left: -$codeblock-padding; // to move back to the left margin of the enclosing blockquote
  }
  h2:before {
    font-family: 'Glyphicons Halflings';
    content: $glyph;
    float: left;
    padding-left: $codeblock-padding;
    padding-right: $codeblock-padding;
    display: inline-block;
    -webkit-font-smoothing: antialiased;
  }

}

.callout{ @include bkSetup($color-callout, "\e146"); }
.challenge{ @include bkSetup($color-challenge, "\270f"); }
.checklist{ @include bkSetup($color-checklist, "\e067"); }
.discussion{ @include bkSetup($color-discussion, "\e123"); }
.keypoints{ @include bkSetup($color-keypoints, "\e101"); }
.objectives{ @include bkSetup($color-objectives, "\e085"); }
.prereq{ @include bkSetup($color-prereq, "\e124"); }
.solution{ @include bkSetup($color-solution, "\e105"); }
.testimonial{ @include bkSetup($color-testimonial, "\e143"); }

.callout h3,
.challenge h3,
.checklist h3,
.discussion h3,
.keypoints h3,
.objectives h3,
.prereq h3,
.solution h3,
.testimonial h3 {
font-size: 18px;
}

//----------------------------------------
// Override Bootstrap settings.
//----------------------------------------

code {
  white-space: nowrap;
  padding: 2px 2px 2px 2px;
  font-size: 10pt;
  //border: none;
  color: #238E23;
  background-color: #23;
}

img {
  max-width: 100%;
}

//----------------------------------------
// Miscellaneous.
//----------------------------------------

.maintitle {
  text-align: center;
}

.footertext {
  text-align: center;
}

footer .copyright,
footer .help-links
{
    font-size: 18px;
    margin-top: 10px;
    margin-bottom: 10px;
    font-weight: 500;
    line-height: 1.1;
}

img.navbar-logo {
  height: 40px; // synchronize with height of navbar
  padding-top: 5px;
  padding-right: 10px;
}

div.branding {
  color: $color-brand;
}

ul,
ol {
  padding-left: 2em;
}

span.fold-unfold {
  margin-left: 1em;
  opacity: 0.5;
}


//----------------------------------------
// keyboard key style, from StackExchange.
//----------------------------------------

kbd {
    display: inline-block;
    margin: 0 .1em;
    padding: .1em .6em;
    font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
    font-size: 11px;
    line-height: 1.4;
    color: #242729;
    text-shadow: 0 1px 0 #FFF;
    background-color: #e1e3e5;
    border: 1px solid #adb3b9;
    border-radius: 3px;
    box-shadow: 0 1px 0 rgba(12,13,14,0.2), 0 0 0 2px #FFF inset;
    white-space: nowrap;
    font-style: normal;
}

// General
body {
  .container {
    font-family: "national-book";
    font-size: 16px;
    h1, h2 {
      font-family: "national-medium";
    }
  }
}

blockquote {
  margin-top: 20px;
  border-radius: 5px;
  box-shadow: 2px 2px 15px rgba(0,0,0,0.1);
  p {
    padding: 10px;
  }
  .row {
    margin: 0px;
  }
  h2:before {
    font-size: 0.7em;
    margin: 4px 10px;
  }
  &.challenge {
    padding: 10px;
  }
}

h1 {
  margin: 40px 0px 25px 0px;
}
.maintitle {
  a {
    &:hover {
      text-decoration: none;
    }
  }
}

// Navbar
.logo.navbar-brand {
  background-image: url(https://www.mq.edu.au/__data/assets/file/0007/1231/spritesheet.svg);
  background-repeat: no-repeat;
  background-position: 0 0;
  background-size: 400px 1000px;
  padding-left: 250px;
}
nav.navbar-default {
  background: none;
  border: none;
  box-shadow: none;
  margin-top: 35px;
  margin-bottom: 35px;
  a {
    font-family: "national-medium";
    text-transform: uppercase;
    font-size: 22px;
    color: black;
    .caret {
      margin-left: 10px;
    }
  }
  .dropdown-menu {
    a {
      font-family: "national-book";
      text-transform: none;
      font-size: 18px;
    }
  }
}

// Mobile styling
@media only screen and (max-width: 767px) {
  .desktop-only {
    display: none;
  }
  .logo.navbar-brand {
    margin-bottom: 5px;
  }
}

//----------------------------------------
// Highlighted code blocks
//----------------------------------------

.highlight table {
  margin-bottom: 0;
  font-size: 1em;
  border: 0;

  td {
    padding: 0;
    width: calc(100% - 1em);
    border: 0;

    /* line numbers*/
    &.gutter,
    &.rouge-gutter {
      padding-left: 0em;
      padding-right: 0em;
      padding-top: 0;
      padding-bottom: 0;
      width: 1em;

      text-align: right;
    }

    /* code */
    &.code,
    &.rouge-code {
      padding-left: 1em;
      padding: 0 0;
    }
  }

  pre {
    margin: 0;
  }
}

.highlight pre {
  width: 100%;
  margin-bottom: 5px;
}

.table > tfoot > tr > td {
  border-top: 0;
}

.lineno {
  border: none;
  margin-right: none;
  color: #238E23;
  background-color: inherit;
  display: inline-block;
  padding-left: 0;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

